# biomod

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  WORKFLOW.md  pyproject.toml  requirements.txt  setup.py
biomod/: config.py
biomod/core/: atoms.py  base.py  constants.py  data.py  math.py  residues.py  rmsd.py  structures.py
biomod/energy/: angle_scorer.py  bond_len_constrain.py  clash_net.py  disulfide_net.py  electro_net.py  entropy_sc.py  fake_atoms.py  force_field.py  hashings.py  hashingsGeneration.py  hbond_net.py  math_utils.py  solvatation.py  solvent_accessibility.py  vdw.py  vitra_tensors.py
biomod/io/: builder.py  io.py  mmcif.py  mmtf.py  output.py  pdb.py  pdb_parser.py  pte_loader.py  smiles.py  utils.py  vitra_utils.py  write_smiles.py
biomod/optimize/: structure_optimizer.py
biomod/utilities/: accessibility.py  geometry.py  hbond.py  mutatingEngine.py  rotator.py  select_best_virtualAtoms.py  utils.py
biomod/utilities/rebuild/: __init__.py  energy.py  main.py
biomod/utilities/secondary_structure/: __init__.py  calculations.py
imported/atomium/: AGENTS.md  Makefile  README.md  pyproject.toml
imported/atomium/atomium/: __init__.py  pdb.py  utilities.py
imported/atomium/tests/: speed.py
imported/atomium/tests/time/: time.py
imported/atomium/tests/unit/: test_bond_inference.py  test_dihedrals.py  test_utilities.py
scripts/: debug_parser.py  extract_hydrogens.py  parse_charmm_topology.py  parse_rotamer_data.py
tests/core/: test_base.py  test_bond_inference.py  test_core.py  test_dihedral_modification.py  test_dihedrals.py  test_hypothesis.py  test_smiles_helpers.py  test_structure_sets.py
tests/energy/: reference_data.pt  test_angle_scorer.py  test_bondlen_constrain.py  test_clash.py  test_disulfide.py  test_electro.py  test_forcefield.py  test_hbond.py  test_hbond_shapes.py  test_solvation.py  test_utils.py  test_vdw.py  test_vitra.py
tests/io/: test_io.py  test_output.py  test_read_smiles.py  test_write_smiles.py
tests/optimize/: test_structure_optimizer.py
tests/utilities/: test_accessibility.py  test_beta_sheets.py  test_geometry.py  test_hbond.py  test_hydrogens.py  test_mutatingEngine.py  test_pulchra.py  test_secondary_structure.py  test_utilities.py  test_utils.py
(+5 files in other folders)
